syntax = "proto3";
option cc_enable_arenas = true;

package Ydb.Console.V1;

option java_package = "com.yandex.ydb.console.v1";

import "ydb/public/api/protos/draft/ydb_console.proto";

service ConsoleService {
    rpc ApplyConfig(Console.ApplyConfigRequest) returns (Console.ApplyConfigResponse);
    rpc AddVolatileConfig(Console.AddVolatileConfigRequest) returns (Console.AddVolatileConfigResponse);
    rpc RemoveVolatileConfig(Console.RemoveVolatileConfigRequest) returns (Console.RemoveVolatileConfigResponse);
    rpc GetConfig(Console.GetConfigRequest) returns (Console.GetConfigResponse);
    rpc ResolveConfig(Console.ResolveConfigRequest) returns (Console.ResolveConfigResponse);
    rpc ResolveAllConfig(Console.ResolveAllConfigRequest) returns (Console.ResolveAllConfigResponse);
}
